<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Noti-Fi</string>

    <!-- ============================================================================ -->
    <!--activity_main layout Strings-->
    <string name="notifi_list_title">Current Notifications</string>
    <string name="new_notifi_button">Create New Notification</string>
    <string name="add_current_button">Add Current WiFi Name</string>
    <string name="manage_favs_button">Manage Saved WiFi Names</string>
    <string name="remove_current_button">Remove Current WiFi Name</string>

    <!-- ============================================================================ -->
    <!--activity_add_notification layout -->
    <string name="edit_title">Title:</string>
    <string name="edit_content">Notification Description:</string>
    <string name="list_of_networks">WiFi Name:</string>
    <string name="save_button">Save</string>
    <string name="canceL_button">Cancel</string>
    <string name="enter_title">Enter title of notification…</string>
    <string name="enter_content_hint">Enter notification…</string>
    <string name="custom_create_button">Custom Network</string>

    <!-- ============================================================================ -->
    <!--activity_favourites layout-->
    <string name="current_favs_list_title">Currently Saved WiFi Names</string>
    <string name="delete_selected_button">Delete Selected WiFi Name</string>
    <string name="save_current_ssid_button">Save Current WiFi Name To Favourites</string>
    <string name="manual_ssid_entry">Manual WiFi Name Entry</string>
    <string name="SSID_here">SSID:</string>
    <string name="add_manually_entered_button">Add</string>

    <string name="delete_noti_fi">Delete Notification</string>
    <string name="delete_saved_wifi">Delete Saved WiFi Name</string>


    <!-- ============================================================================ -->
    <!--activity_delete_notification layout-->
    <string name="ssid_label">WiFi Name:</string>
    <string name="desc_label">Description:</string>
    <string name="select_a_network">Select a WiFi Name</string>
    <string name="delete_text">Delete</string>

    <!-- ============================================================================ -->
    <!-- Menu String resources   -->
    <string name="start_helper_service">Start Helper Service</string>
    <string name="menu_help">Help</string>
    <string name="menu_faq">FAQ</string>
    <string name="menu_permissions_vid">Permission Video</string>

    <!-- ============================================================================ -->
    <!--activity_help layout-->

    <string name="help_text">

        <font size="25"><font color="#8AB4EC"><b>TO GET STARTED</b></font></font>\n\n
        <font size="20">Make sure to hit <i>Always Allow</i> in location settings-permissions for the Noti-Fi app,
            this only ensures that it can find your WiFi connection. \n\n</font>

            <font size="20"><font color="#8AB4EC">
                Click the dots at the top for the Permissions Video tutorial</font></font>

               ________________________________________________\n\n

        <font size="25"><font color="#8AB4EC"><b>ADD A NEW WIFI NAME</b></font></font>\n\n
        <font size="20"><font color="#8AB4EC"><b>Step 1: </b></font>
                                                Click <i>Manage Saved WiFi Names</i>\n\n
                        <font color="#8AB4EC"><b>Step 2: </b></font>
                To save the WiFi that you are currently connected to, click
            <i>Save Current WiFi Name To Favourites</i> or manually enter the SSID and click <i>Add</i></font>
            \n\n

              ________________________________________________\n\n

        <font size="25"><font color="#8AB4EC"><b>DELETE A SAVED WIFI NAME</b></font></font>\n\n
        <font size="20"><font color="#8AB4EC">Step 1:</font> Click <i>Manage Saved WiFi Names</i>\n\n
            <font color="#8AB4EC">Step 2:</font> Choose the WiFi you want to delete from the dropdown menu under
                \"Delete Saved WiFi Name\"\n\n
            <font color="#8AB4EC">Step 3:</font> Once selected, click <i>Delete Selected WiFi Name</i>\n\n</font>

              ________________________________________________\n\n

        <font size="25"><font color="#8AB4EC"><b>CREATE NEW NOTIFICATION</b></font></font>\n\n
        <font size="20"><font color="#8AB4EC">Step 1:</font> Click <i>Create New Notification</i>\n\n
            <font color="#8AB4EC">Step 2:</font> Enter notification description\n\n
            <font color="#8AB4EC">Step 3:</font> Select one of your saved WiFi names from the options\n\n
            <font color="#8AB4EC">Step 4:</font> Click <i>Save</i>\n\n</font>

              ________________________________________________\n\n

        <font size="25"><font color="#8AB4EC"><b>DELETE A NOTIFICATION</b></font></font>\n\n
        <font size="20"><font color="#8AB4EC">Step 1:</font> Click <i>Delete Notification</i>\n\n
            <font color="#8AB4EC">Step 2:</font> Select the WiFi name for the notification that you want to delete\n\n
            <font color="#8AB4EC">Step 3:</font> Click <i>Delete</i>\n\n</font>
    </string>

    <!-- ============================================================================ -->
    <!--activity_faq layout-->

    <string name="faq_text">

        <font size="25"><font color="#8AB4EC"><b>How does the app work?</b></font></font>\n\n
       <font size="20">When your phone connects to WiFi, the app will see which network you connect to.
        After it connects to a WiFi connection, it will check if you have made a notification for this WiFi name.
           If you have, it will send the reminder notification to your phone.\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>Why Does This App Need Location Services?</b></font></font>\n\n
        <font size="20">This app does not keep track of location or use any GPS data.
            The only reason it requires location permissions in the foreground and background is
            because the app needs to read the WiFi network names. Google does not allow apps to get
            the name without location permissions.\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>Does the app use GPS?</b></font></font>\n\n
        <font size="20">Nope! This app does not keep track of location or use any GPS data.\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>Create a notification isn\'t working?</b></font></font>\n\n
        <font size="20">In order to create a new notification, you must make sure that you have a Wifi name
            saved for it first in <i>Manage Saved Wifi Names</i> from the Main page\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>Why Is There A Running Notification?</b></font></font>\n\n
        <font size="20">Android now requires all apps that run in the background to have an active notification.\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>What is running in the background?</b></font></font>\n\n
        <font size="20">The task running in the background is waiting for a WiFi change, nothing else.\n\n</font>

        <font size="25"><font color="#8AB4EC"><b>Who Created This App?</b></font></font>\n\n
        <font size="20">3 Thompson Rivers University students have made this app for a final project :)\n\n</font>



    </string>

    <!-- ============================================================================ -->

</resources>
